--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "devDependencies": {
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.50",
     "typescript": "^3.9.6"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --respawn"
   }
 }
